--- a/install
+++ b/install
@@ -1,4 +1,5 @@
-#setup your app
+#!/bin/bash
+#Setup mycar app
 
 path=$(ls -A 'vendor/')
 
@@ -30,7 +31,7 @@ fi
 
 docker-compose up -d
 
-if [[ ! -z "$path" ]]; then
+if [[ -n "$path" ]]; then
     echo "vendor is not empty"
     docker-compose run --rm php rm -r vendor/
 fi
@@ -44,5 +45,7 @@ docker-compose run --rm php php bin/console --env=test doctrine:database:create
 docker-compose run --rm php php bin/console --env=test doctrine:migrations:migrate
 
 sudo chmod -R 777 .
+
+sudo /bin/sh -c 'echo "127.0.0.1 mycar.local" >> /etc/hosts'
 
 echo "process finished"
